--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "webpack-target-electron-renderer": "^0.3.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.6",
     "electron-debug": "^0.5.1",
     "font-awesome": "^4.4.0",
     "history": "~1.13.0",
