code style adjustment: 4 spaces indentation, beloved double quotes
Change-Id: I7f4bcfe0f7958aa32f4f31b5954e92cd28e249d0

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,9 @@
     "no-var": 0,
     "vars-on-top": 0,
     "comma-dangle": 0,
-    "no-use-before-define": 0
+    "no-use-before-define": 0,
+    "indent": [2, 4, {"SwitchCase": 1}],
+    "quotes": [2, "double"]
   },
   "plugins": [
     "react"
