--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "electron-react-boilerplate",
-  "productName": "ElectronReact",
-  "version": "0.7.0",
-  "description": "Electron application boilerplate based on React, React Router, Webpack, React Hot Loader for rapid application development",
+  "name": "wer-hat-an-der-uhr-gedreht",
+  "productName": "WHADUG",
+  "version": "0.0.0",
+  "description": "Timesheet application",
   "main": "main.js",
   "scripts": {
     "test": "better-npm-run test",
