--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,8 @@
     "comma-dangle": 0,
     "no-use-before-define": 0,
     "indent": [2, 4, {"SwitchCase": 1}],
-    "quotes": [2, "double"]
+    "quotes": [2, "double"],
+    "react/prop-types": [2, { "ignore": ["dispatch"] }]
   },
   "plugins": [
     "react"
